--- a/web/views/wall.handlebars
+++ b/web/views/wall.handlebars
@@ -2,15 +2,7 @@
 {{#each columns}}
     <div class="column">
     {{#each this}}
-        <div class="item">
-            <img src="pictures/{{this.file}}" alt="{{this.file}}" id="{{this.id}}" class="wall" />
-            {{#if this.date}}
-                <h3>{{this.date}}</h3>
-            {{/if}}
-            {{#if this.description}}
-                <h2>{{this.description}}</h2>
-            {{/if}}
-        </div>
+        {{> item}}
     {{/each}}
     </div>
 {{/each}}
