added mousewheel jquery plugin

--- a/web/views/wall.handlebars
+++ b/web/views/wall.handlebars
@@ -2,7 +2,7 @@
 {{#each columns}}
     <div class="column">
     {{#each this}}
-        {{> item}}
+        {{> _views_picture }}
     {{/each}}
     </div>
 {{/each}}
