--- a/web/views/zoom.handlebars
+++ b/web/views/zoom.handlebars
@@ -1,11 +1,11 @@
-<article class="zoom">
-    <header>{% include "headbar-zoom.twig" %}</header>
-    <img src="/pictures/{{picture.file}}" alt="" />
+<section class="zoom">
+    <header>{{> _views_headbar-zoom }}</header>
+    <img src="/pictures/{{file}}" alt="" />
     
     <div class="comment form hidden">
-        <input type="hidden" name="id" value="{{picture.id}}" />
+        <input type="hidden" name="id" value="{{id}}" />
         <h1><input type="text" name="author" id="author" class="virgin" maxlength="100" /></h1>
-        <h2>{{currentDate}}</h2>
+        <h2>{{formatDatetime currentDate}}</h2>
         <textarea name="text" id="text" rows="4" class="virgin"></textarea>
         <span class="buttons">
             <button class="submit">Envoyer</button>
@@ -13,7 +13,7 @@
         </span>
     </div>
 
-    {% for comment in comments %}
-        {% include "comment.twig" %}
-    {% endfor %}
-</article>
+    {{#each comments}}
+        {{> _views_comment }}
+    {{/each}}
+</section>
