--- a/web/views/headbar.handlebars
+++ b/web/views/headbar.handlebars
@@ -1,1 +1,3 @@
-<span>Tan, Johan & Evan</span>
+<img alt="Tan, Johan & Evan" src="css/titre.png" />
+<span class="info">{{nbItems}} photos à cliquer et commenter.</span>
+<img alt="Beta" src="css/beta.png" style="position: absolute; top: 0; right: 0; border: 0; z-index: 1;" />
