--- a/web/views/zoom.handlebars
+++ b/web/views/zoom.handlebars
@@ -1,6 +1,9 @@
 <section class="zoom">
     <header>{{> _views_headbar-zoom }}</header>
-    <img src="/pictures/{{file}}" alt="" />
+    
+    <span class="picture">
+        <img src="/pictures/{{file}}" alt="" />
+    </span>
     
     <div class="comment form hidden">
         <input type="hidden" name="id" value="{{id}}" />
