--- a/web/views/headbar-zoom.handlebars
+++ b/web/views/headbar-zoom.handlebars
@@ -1,4 +1,4 @@
-<img src="css/logo_m.png" alt="Logo" />
+<img src="/css/logo_m.png" alt="Logo" />
 <span>{{formatDay date}} :</span>
 <span>
 {{#if description}}
