--- a/web/views/picture.handlebars
+++ b/web/views/picture.handlebars
@@ -1,5 +1,5 @@
 <div class="item">
-    <img src="pictures/{{file}}" alt="{{file}}" id="{{id}}" class="wall" />
+    <img src="/pictures/{{file}}" alt="{{file}}" id="{{id}}" class="wall" />
     {{#if date}}
         <h3>{{date}}</h3>
     {{/if}}
