New style for comments + fixed item order bug

--- a/web/views/headbar-zoom.handlebars
+++ b/web/views/headbar-zoom.handlebars
@@ -1,4 +1,4 @@
-<img src="/css/logo_m.png" alt="Logo" />
+<a href="/"><img src="/css/logo_m.png" alt="Logo" /></a>
 <span>{{formatDay date}} :</span>
 <span>
 {{#if description}}
