--- a/web/css/main.css
+++ b/web/css/main.css
@@ -144,9 +144,22 @@ footer {
 }
 
 aside {
+    -moz-box-shadow: 0 0 2px 2px #bbb; 
+    -webkit-box-shadow: 0 0 2px 2px #bbb;
+    background-color: gray;
+    box-shadow: 0 0 2px 2px #bbb;
     float: left;
-    margin-left: -280px;
-    width: 270px;
+    margin-left: -282px;
+    margin-top: 9px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    text-align: center;
+    width: 275px;
+}
+
+aside h4 {
+    color: white;
+    margin: 7px 0 0 0;
 }
 
 .zoom {
@@ -158,7 +171,7 @@ aside {
 }
 .zoom > div {
     overflow:hidden;
-    margin-right: 290px;
+    margin-right: 299px;
 }
 
 .zoom span.picture {
@@ -166,11 +179,11 @@ aside {
     text-align: center;
 }
 .zoom span.picture img {
+    -moz-box-shadow: 0 0 2px 2px #bbb; 
+    -webkit-box-shadow: 0 0 2px 2px #bbb;
+    box-shadow: 0 0 2px 2px #bbb;
     cursor: pointer;
     margin: 10px 0 0 10px;
-    -moz-box-shadow: 0 0 2px 2px #FFFFBC; 
-    -webkit-box-shadow: 0 0 2px 2px #FFFFBC;
-    box-shadow: 0 0 2px 2px #FFFFBC;
 }
 
 .comment {
@@ -179,7 +192,7 @@ aside {
     font-size: medium;
     margin: 10px 5px 5px 10px;
     overflow: hidden;
-    padding: 10px;
+    padding: 6px;
     text-align: left;
     width: 240px;
     -moz-box-shadow: 0 0 2px 2px #FFF; 
@@ -204,12 +217,6 @@ aside {
 
 .hidden {
     display: none;
-}
-
-.comment.form {
-    right: 5px;
-    position: absolute;
-    top: 32px;
 }
 
 .form input[type=text] {
@@ -276,7 +283,7 @@ aside {
     header span.info {
         clear: both;
         float: left;
-        padding: 0;
+        padding: 0 0 0 42px;
     }
     
     header span {
