--- a/web/views/zoom.handlebars
+++ b/web/views/zoom.handlebars
@@ -3,19 +3,19 @@
         <span class="picture">
             <img src="/pictures/{{file}}" alt="" />
         </span>
-
-        <div class="comment form hidden">
-            <input type="hidden" name="id" value="{{id}}" />
-            <h1><input type="text" name="author" id="author" class="virgin" maxlength="100" /></h1>
-            <h2>{{formatDatetime currentDate}}</h2>
-            <textarea name="text" id="text" rows="4" class="virgin"></textarea>
-            <span class="buttons">
-                <button class="submit">Envoyer</button>
-                <button class="cancel">Annuler</button>
-            </span>
-        </div>
     </div>
 </article>
 
 <aside>
+    <h4>Commentaires</h4>
+    <div class="comment form hidden">
+        <input type="hidden" name="id" value="{{id}}" />
+        <h1><input type="text" name="author" id="author" class="virgin" maxlength="100" /></h1>
+        <h2>{{formatDatetime currentDate}}</h2>
+        <textarea name="text" id="text" rows="4" class="virgin"></textarea>
+        <span class="buttons">
+            <button class="submit">Envoyer</button>
+            <button class="cancel">Annuler</button>
+        </span>
+    </div>
 </aside>
