--- a/web/views/picture.handlebars
+++ b/web/views/picture.handlebars
@@ -2,6 +2,8 @@
     <img src="/pictures/{{file}}" alt="{{file}}" id="{{id}}" class="wall" />
     {{#if date}}
         <h3>{{date}}</h3>
+    {{/if}}
+    {{#if comments}}
         <h4>{{comments.length}}</h4>
     {{/if}}
     {{#if description}}
