--- a/web/views/zoom.handlebars
+++ b/web/views/zoom.handlebars
@@ -8,6 +8,7 @@
 
 <aside>
     <h4>Commentaires</h4>
+    <img src="/css/dontlike.png" alt="J'aime" title="J'aime" alt="J'aime" />
     <div class="comment form hidden">
         <input type="hidden" name="id" value="{{id}}" />
         <h1><input type="text" name="author" id="author" class="virgin" maxlength="100" /></h1>
