--- a/web/views/zoom.handlebars
+++ b/web/views/zoom.handlebars
@@ -8,7 +8,8 @@
 
 <aside>
     <h4>Commentaires</h4>
-    <img src="/css/dontlike.png" alt="J'aime" title="J'aime" alt="J'aime" />
+    <img src="/css/dontlike.png" alt="J'aime" title="J'aime" alt="J'aime" class="dontlike"/>
+    <img src="/css/like.png" title="Je n'aime plus" alt="Je n'aime plus" class="like"/>
     <div class="comment form hidden">
         <input type="hidden" name="id" value="{{id}}" />
         <h1><input type="text" name="author" id="author" class="virgin" maxlength="100" /></h1>
