--- a/views/rss.twig
+++ b/views/rss.twig
@@ -12,6 +12,9 @@
             <title>{{item.description|default(item.file)}}</title>
             <link>http://life.jops-dev.com/item/{{item.id}}</link>
             <pubDate>{{item.date|date("D, d M Y H:i:s T")}}</pubDate>
+            <description>
+                <![CDATA[<img width='300px' src='http://life.jops-dev.com/pictures/{{item.file}}'/>]]>
+            </description>
         </item>
 {% endfor %}
     </channel>
