--- a/web/css/main.css
+++ b/web/css/main.css
@@ -46,7 +46,7 @@ header span {
     float: left;
     padding-left: 10px;
 }
-    
+
 header span.info {
     float: right;
     padding: 4px 50px 0 0;
@@ -244,7 +244,7 @@ article.zoom span.picture img {
     display: none;
 }
 
-.form input[type=text] {
+.form input[type=text], .form input[type=password] {
     background-color: #eee;
     border: 0;
     font-size: large;
@@ -277,6 +277,26 @@ article.zoom span.picture img {
     background-color: #cccccc;
 }
 
+#overlay {
+    background-color: rgba(50,50,50,0.7);
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    text-align:center;
+    z-index: 1000;
+}
+
+.login {
+    width: 300px;
+    margin: 100px auto;
+    background-color: #fff;
+    border:1px solid #000;
+    padding:15px;
+    text-align:center;
+}
+
 .virgin {
     color: grey;
     font-style: italic;
@@ -306,34 +326,34 @@ img.like, img.dontlike {
     header img:first-child {
         float: left;
     }
-    
+
     header button {
         font-size: small;
         height: auto;
         margin: 5px 10px;
         padding: 5px;
     }
-    
+
     header span.info {
         clear: both;
         float: left;
         padding: 0 0 0 42px;
     }
-    
+
     header span {
         font-size: small;
         top: 0;
     }
-    
+
     .column .item h2, .column .item h3 {
         font-size: small;
     }
-    
+
     .comment.form {
         right: 7px;
         top: 42px;
     }
-    
+
     aside {
         display: none;
     }
