--- a/web/views/zoom.handlebars
+++ b/web/views/zoom.handlebars
@@ -7,7 +7,7 @@
 </article>
 
 <aside>
-    <h4>Commentaires</h4>
+    <h4>{{i18n.comments}}</h4>
     <img src="/css/dontlike.png" alt="J'aime" title="J'aime" alt="J'aime" class="dontlike"/>
     <img src="/css/like.png" title="Je n'aime plus" alt="Je n'aime plus" class="like"/>
     <div class="comment form hidden">
@@ -16,8 +16,8 @@
         <h2>{{formatDatetime currentDate}}</h2>
         <textarea name="text" id="text" rows="4" class="virgin"></textarea>
         <span class="buttons">
-            <button class="submit">Envoyer</button>
-            <button class="cancel">Annuler</button>
+            <button class="submit">{{i18n.submit}}</button>
+            <button class="cancel">{{i18n.cancel}}</button>
         </span>
     </div>
 </aside>
