Trying to handle columns correctly.

--- a/web/js/templates/app.html
+++ b/web/js/templates/app.html
@@ -1,3 +1,5 @@
 <header></header>
-<section id="content"></section>
+<section id="content">
+  <div class="loader">Chargement...</div>
+</section>
 <footer>&copy; Copyright 2011 by JoPs.</footer>
