--- a/web/js/templates/header-zoom.hbs
+++ b/web/js/templates/header-zoom.hbs
@@ -2,13 +2,9 @@
     <a href="/" class="brand">
         <img src="/img/logo_m.png" alt="Logo" />
     </a>
-    <span class="date">{{date}} :</span>
+    <span class="date">{{formatDate date "dd MMM yyyy"}}</span>
     <span class="description">
-    {{#if description}}
-        {{description}}
-    {{else}}
-        {{file}}
-    {{/if}}
+    {{#if description}} : {{description}}{{/if}}
     </span>
     <img alt="Beta" src="/img/beta.png" class="beta" />
 </div>
