--- a/web/js/templates/picture-zoom.hbs
+++ b/web/js/templates/picture-zoom.hbs
@@ -1,7 +1,8 @@
 <div class="span9 picture">
     <img src="/pictures/{{file}}" alt="" />
 </div>
-<div class="span3 comments">
-    <h4>Commentaires</h4>
-    <button class="btn btn-primary" type="button">Ajouter un commentaire</button>
+<div class="span3 commentBar">
+    <h4>{{labels.comments}}</h4>
+    <!-- button class="btn btn-primary" type="button">{{labels.addComment}}</button -->
+    <div class="row-fluid comments"></div>
 </div>
