--- a/web/js/templates/picture.hbs
+++ b/web/js/templates/picture.hbs
@@ -1,6 +1,6 @@
 <img src="/pictures/{{file}}" alt="{{file}}" id="{{id}}" class="wall" />
 {{#if date}}
-    <span class="date">{{date}}</span>
+    <span class="date">{{formatDate date labels.dateFormat}}</span>
 {{/if}}
 {{#if comments}}
     <span class="nb-comments">{{comments.length}}</span>
