--- a/web/js/templates/picture-zoom.hbs
+++ b/web/js/templates/picture-zoom.hbs
@@ -3,6 +3,6 @@
 </div>
 <div class="span3 commentBar">
     <h4>{{labels.comments}}</h4>
-    <!-- button class="btn btn-primary" type="button">{{labels.addComment}}</button -->
+    <div class="row-fluid commentForm"></div>
     <div class="row-fluid comments"></div>
 </div>
