--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -73,7 +73,6 @@ header .description {
     bottom: 0;
     color: #ffffff;
     font-size: large;
-    left: 0;
     margin: 0;
     padding: 4px 0;
     position: absolute;
@@ -90,13 +89,14 @@ header .description {
     font-size: medium;
     padding: 4px 5px;
     text-align: center;
+    left: 0;
     top: 0;
     width: auto;
     z-index: 2;
 }
 
 .column .item .nb-comments {
-    background-image: url('comment.png');
+    background-image: url('../img/comment.png');
     background-position: right;
     background-repeat: no-repeat;
     bottom: auto;
