Using pictos to give access to the admin

--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -38,7 +38,7 @@ header .description {
     font-weight: bold;
 }
 
-.beta {
+header img.beta, header img.admin, header img.upload {
     border: 0;
     position: absolute;
     right: 0;
