--- a/web/templates/header.hbs
+++ b/web/templates/header.hbs
@@ -4,5 +4,7 @@
         <img alt="Tan, Johan & Evan" src="/img/titre.png" />
     </a>
     <p class="info pull-right">{{#unlessequals nbItems 0}}{{nbItems}} {{labels.picturesToClickAndComment}}{{/unlessequals}}</p>
-    <img alt="Beta" src="/img/beta.png" class="beta" />
+    <img alt="Admin" title="Ajout de photos, modération des commentaires" src="/img/admin.png" class="admin" />
+    <img alt="Upload" title="Ajout de photos" src="/img/upload.png" class="upload" />
+    <!-- img alt="Beta" src="/img/beta.png" class="beta" / -->
 </div>
