--- a/web/templates/login.hbs
+++ b/web/templates/login.hbs
@@ -19,6 +19,6 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">Annuler</button>
-    <button class="btn btn-primary">Valider</button>
+    <button class="btn" data-dismiss="modal" aria-hidden="true">{{labels.cancel}}</button>
+    <button class="btn btn-primary">{{labels.validate}}</button>
 </div>
