--- a/web/templates/upload.hbs
+++ b/web/templates/upload.hbs
@@ -4,7 +4,7 @@
 </div>
 <div class="modal-body">
     <form class="form-horizontal">
-        <div class="control-group">
+        <div class="pictures">
         {{#each pictures}}
             <div class="upload-image">
                 <div class="upload-image-zone">
@@ -14,7 +14,7 @@
             </div>
         {{/each}}
         </div>
-        <div class="control-group pull-right">
+        <div class="control-group">
             <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">{{labels.cancel}}</button>
             <button type="submit" class="btn btn-success"><i class="icon-ok icon-white"></i> {{labels.uploadPictures}}</button>
         </div>
