--- a/web/templates/comment.hbs
+++ b/web/templates/comment.hbs
@@ -1,3 +1,4 @@
 <span class="author">{{author}}</span>
+<span class="delete"><i class="icon-remove"></i></span>
 <span class="date">{{formatDate date labels.dateTimeFormat}}</span>
 <span>{{text}}</span>
