Display description hint if no description

--- a/web/templates/header-edit.hbs
+++ b/web/templates/header-edit.hbs
@@ -2,7 +2,7 @@
     <a href="/" class="brand">
         <img src="/img/logo_m.png" alt="Logo" />
     </a>
-    <span class="date">{{formatDate date labels.dateFormat}}</span> :
-    <input type="text" name="description" value="{{description}}" placeholder="{{labels.enterDescription}}" />
+    <span class="date">{{formatDate item.date labels.dateFormat}}</span> :
+    <input type="text" name="description" value="{{item.description}}" placeholder="{{labels.enterDescription}}" />
     <img alt="Beta" src="/img/beta.png" class="beta" />
 </div>
