--- a/web/templates/header-zoom.hbs
+++ b/web/templates/header-zoom.hbs
@@ -2,9 +2,11 @@
     <a href="/" class="brand">
         <img src="/img/logo_m.png" alt="Logo" />
     </a>
-    <span class="date">{{formatDate date labels.dateFormat}}</span>
+    <span class="date">{{formatDate item.date labels.dateFormat}}</span>
     <span class="description">
-    {{#if description}} : {{description}}{{/if}}
+    {{#if item.description}} : {{item.description}} {{else}}
+        {{#if admin}} : {{labels.addDescription}} {{/if}}
+    {{/if}}
     </span>
     <img alt="Beta" src="/img/beta.png" class="beta" />
 </div>
