--- a/web/templates/header-zoom.hbs
+++ b/web/templates/header-zoom.hbs
@@ -8,5 +8,7 @@
         {{#if admin}} : {{labels.addDescription}} {{/if}}
     {{/if}}
     </span>
-    <img alt="Beta" src="/img/beta.png" class="beta" />
+    <span class="delete" style="display: inline;">
+        {{labels.deletePicture}}
+    </span>
 </div>
