--- a/web/templates/header-edit.hbs
+++ b/web/templates/header-edit.hbs
@@ -4,5 +4,7 @@
     </a>
     <span class="date">{{formatDate item.date labels.dateFormat}}</span> :
     <input type="text" name="description" value="{{item.description}}" placeholder="{{labels.enterDescription}}" />
-    <img alt="Beta" src="/img/beta.png" class="beta" />
+    <span class="delete" style="display: inline;">
+        {{labels.deletePicture}}
+    </span>
 </div>
