--- a/web/templates/login.hbs
+++ b/web/templates/login.hbs
@@ -7,7 +7,7 @@
         <div class="control-group">
             <label class="control-label" for="email">{{labels.email}}</label>
             <div class="controls">
-                <input type="text" name="email" id="email" value="" placeholder="{{labels.email}}">
+                <input type="email" name="email" id="email" value="" placeholder="{{labels.email}}">
             </div>
         </div>
         <div class="control-group">
