--- a/web/templates/comment-form.hbs
+++ b/web/templates/comment-form.hbs
@@ -1,6 +1,10 @@
 <form>
     <textarea name="text" placeholder="{{labels.anyComment}}" rows="1" tabindex="1"></textarea>
-    <input type="text" name="author" value="" placeholder="{{labels.authorHint}}" class="hidden" tabindex="2" />
-    <button type="button" class="btn hidden" tabindex="4">{{labels.cancel}}</button>
-    <button type="submit" class="btn btn-success hidden" tabindex="3"><i class="icon-ok icon-white"></i> {{labels.submitComment}}</button>
+    <div class="masked">
+        <span class="help-inline"></span>
+        <input type="text" name="author" value="" placeholder="{{labels.authorHint}}" tabindex="2" />
+
+        <button type="button" class="btn" tabindex="4">{{labels.cancel}}</button>
+        <button type="submit" class="btn btn-success" tabindex="3"><i class="icon-ok icon-white"></i> {{labels.submitComment}}</button>
+    </div>
 </form>
