--- a/web/templates/header.hbs
+++ b/web/templates/header.hbs
@@ -1,10 +1,10 @@
 <div class="navbar-inner">
     <a href="/" class="brand">
         <img src="/img/logo_m.png" alt="Logo" />
-        <img alt="Tan, Johan & Evan" src="/img/titre.png" />
+        <img alt="{{title}}" src="/img/titre.png" />
     </a>
     <p class="info pull-right">{{#unlessequals nbItems 0}}{{nbItems}} {{labels.picturesToClickAndComment}}{{/unlessequals}}</p>
+    <div class="filter">Filtrer...</div>
     <img alt="Admin" title="Ajout de photos, modération des commentaires" src="/img/admin.png" class="admin" />
     <img alt="Upload" title="Ajout de photos" src="/img/upload.png" class="upload" />
-    <!-- img alt="Beta" src="/img/beta.png" class="beta" / -->
 </div>
