Filter view is done

--- a/web/templates/filter-dates.hbs
+++ b/web/templates/filter-dates.hbs
@@ -1,11 +1,13 @@
-<div class="column month">
-{{#each months}}
-    <span{{#ifequals ../month this}} class="selected"{{/ifequals}}>{{this}}</span>
-{{/each}}
+<div>
+    <div class="column year">
+    {{#each years}}
+        <span class="alone{{#ifequals ../year this}} selected{{/ifequals}}">{{this}}</span>
+    {{/each}}
+    </div>
+    <div class="column month{{#unless year}} hidden{{/unless}}">
+    {{#each months}}
+        <span{{#ifequals ../month this}} class="selected"{{/ifequals}}>{{this}}</span>
+    {{/each}}
+    </div>
 </div>
-<div class="column year">
-{{#each years}}
-    <span{{#ifequals ../year this}} class="selected"{{/ifequals}}>{{this}}</span>
-{{/each}}
-</div>
-<button>OK</button>
+<button class="btn">{{labels.validate}}</button>
