--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -308,27 +308,51 @@ form {
     margin-top: 6px;
     padding: 0 25px;
     position: absolute;
+    text-align: center;
+}
+
+.filter.expanded {
+    margin-left: 40%;
+}
+
+.filter i {
+    position: relative;
+    top: 1px;
+    left: 17px;
 }
 
 .filter div.column {
     cursor: default;
     float: left;
     padding: 10px 20px;
+    width: auto;
+}
+.filter div.column.month {
+    width: 200px;
 }
 .filter div.column span {
     background-color: #ffffff;
     border-radius: 5px;
-    clear: both;
     cursor: pointer;
     float: left;
     font-style: normal;
     margin: 5px;
     padding: 0 5px;
 }
+.filter div.column.year span {
+    clear: both;
+}
 .filter div.column span.selected {
     background-color: lightgreen;
 }
+.filter div.column.month span.selected {
+    background-color: powderblue;
+}
+
 .filter button {
-    clear: both;
-    float: left;
+    margin-bottom: 10px;
+}
+
+.hidden {
+    display: none;
 }
