--- a/web/templates/picture.hbs
+++ b/web/templates/picture.hbs
@@ -1,4 +1,4 @@
-<img src="/pictures/m_{{file}}" alt="{{file}}" id="{{id}}" class="wall" />
+<img src="/pictures/m{{quality}}_{{file}}" alt="{{file}}" id="{{id}}" class="wall" />
 {{#if date}}
     <span class="date">{{formatDate date labels.dateFormat}}</span>
 {{/if}}
