--- a/web/app/templates/header.hbs
+++ b/web/app/templates/header.hbs
@@ -1,10 +1,14 @@
-<div class="navbar-inner">
-    <a href="/" class="brand">
-        <img src="/img/logo_m.png" alt="Logo" />
-        <img alt="{{title}}" src="/img/titre.png" />
-    </a>
-    <p class="info pull-right">{{#unlessequals nbItems 0}}{{nbItems}} {{labels.picturesToClickAndComment}}{{/unlessequals}}</p>
-    <div class="filter">Filtrer...</div>
-    <img alt="Admin" title="Ajout de photos, modération des commentaires" src="/img/admin.png" class="admin" />
-    <img alt="Upload" title="Ajout de photos" src="/img/upload.png" class="upload" />
-</div>
+<header>
+    <div class="navbar navbar-fixed-top navbar-inverse">
+        <div class="navbar-inner">
+            {{#link-to 'items' class="navbar-brand"}}
+                <img src="img/logo_m.png" alt="Logo" />
+                <img alt="{{unbound title}}" src="img/titre.png" />
+            {{/link-to}}
+            <p class="info pull-right">{{#unlessequals nbItems 0}}{{nbItems}} {{labels.picturesToClickAndComment}}{{/unlessequals}}</p>
+            <div class="filter">Filtrer...</div>
+            <img alt="Admin" title="Ajout de photos, modération des commentaires" src="img/admin.png" class="admin" />
+            <img alt="Upload" title="Ajout de photos" src="img/upload.png" class="upload" />
+        </div>
+    </div>
+</header>
