--- a/web/app/templates/items.hbs
+++ b/web/app/templates/items.hbs
@@ -1,9 +1,12 @@
-<div class="row">
-{{#for 1 3}}
-    <div id="column{{this}}" class="column col-md-4">
-    {{#each}}
-        {{partial 'picture'}}
-    {{/each}}
+{{partial 'header'}}
+<div class="main container-fluid">
+    <div class="row">
+    {{#for 1 3}}
+        <div id="column{{this}}" class="column col-md-4">
+        {{#each items}}
+            {{partial 'picture'}}
+        {{/each}}
+        </div>
+    {{/for}}
     </div>
-{{/for}}
 </div>
