--- a/web/app/templates/picture.hbs
+++ b/web/app/templates/picture.hbs
@@ -1,12 +1,14 @@
 <div class="item">
-    <img src="/pictures/m_{{unbound file}}" alt="{{unbound file}}" id="{{unbound id}}" class="wall" />
-{{#if date}}
-    <span class="date">{{format-date date}}</span>
-{{/if}}
-{{#if comments}}
-    <span class="nb-comments">{{comments.length}}</span>
-{{/if}}
-{{#if description}}
-    <span class="description">{{description}}</span>
-{{/if}}
+    {{#link-to 'item' this}}
+        <img src="http://wallblog.jops-dev.com/pictures/m2_{{unbound file}}" alt="{{unbound file}}" id="{{unbound id}}" class="wall" />
+    {{#if date}}
+        <span class="date">{{format-date date 'D MMMM YYYY'}}</span>
+    {{/if}}
+    {{#if comments}}
+        <span class="nb-comments">{{comments.length}}</span>
+    {{/if}}
+    {{#if description}}
+        <span class="description">{{description}}</span>
+    {{/if}}
+    {{/link-to}}
 </div>
